zarf/k8s/kustomize/base/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: machina-front-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: machina-front
  template:
    metadata:
      labels:
        app: machina-front
    spec:
      containers:
        - name: machina-front
          image: lgarciaac/machina-client:1.0-arm64
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
