zarf/k8s/kustomize/base/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: machina-front-service
spec:
  selector: 
    app: machina-front
  type: ClusterIP  
  ports:
    - port: 80
      targetPort: 80
